# wise_robotics

./: README.md
Meanshift/: Contents.m  distanceCalculator.m  main.m  meanShift.m  segmentation.m
NewProject/: NewProject.jucer
NewProject/Builds/LinuxMakefile/: Makefile
NewProject/Builds/MacOSX/: Info-App.plist
NewProject/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
NewProject/JuceLibraryCode/: AppConfig.h  JuceHeader.h
annotations/: CMakeLists.txt
annotations/src/: annotations.cpp  cmd_utils.h
squares/: CMakeLists.txt  instructions.txt
squares/squares/: CMakeLists.txt
squares/src/: csv.h  detection.cpp  detection.h  macros.h  squares.cpp  squares_api.cpp  squares_gui  squares_gui.cpp  squares_gui.h  test.cpp  train.cpp  train.h  utilities.h  web_utils.h
test_app/: CMakeLists.txt  test_app.project  test_app.workspace
test_app/.codelite/: refactoring.db  test_app.session
test_app/src/: BlurImage.cpp  cut_text.txt
test_dir/: CMakeLists.txt
test_dir/src/: testDir.cpp
test_haar/: CMakeLists.txt
test_haar/src/: test_haar.cpp
test_harris/: CMakeLists.txt
